убрала ссылки с точек

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -76,7 +76,7 @@
                         alt="мороженое в стаканчике">
                 </picture>
                 <h3 class="cards-box-title">ice cream</h3>
-                <a href="#" class="cards-link">
+                <div class="cards-link">
                     <svg class="cards-svg" width="6" height="6">
                         <use href="./images/svg/red-dot.svg"></use>
                     </svg>
@@ -86,7 +86,7 @@
                     <svg class="cards-svg" width="6" height="6">
                         <use href="./images/svg/red-dot.svg"></use>
                     </svg>
-                </a>
+                </div>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <button class="icon-link" data-product-button>
@@ -167,7 +167,7 @@
                     <img src="./images/products/mobile/product-icecoffee.png" class="cards-img" alt="холодный кофе">
                 </picture>
                 <h3 class="cards-box-title">ice coffee</h3>
-                <a href="#" class="cards-link">
+                <div class="cards-link">
                     <svg class="cards-svg" width="6" height="6">
                         <use href="./images/svg/red-dot.svg"></use>
                     </svg>
@@ -177,7 +177,7 @@
                     <svg class="cards-svg" width="6" height="6">
                         <use href="./images/svg/red-dot.svg"></use>
                     </svg>
-                </a>
+                </div>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <button class="icon-link" data-product1-button>
@@ -257,7 +257,7 @@
                     <img src="./images/products/mobile/product-milkshake.png" class="cards-img" alt="молочный коктейль">
                 </picture>
                 <h3 class="cards-box-title">milkshakes</h3>
-                <a href="#" class="cards-link">
+                <div class="cards-link">
                     <svg class="cards-svg" width="6" height="6">
                         <use href="./images/svg/red-dot.svg"></use>
                     </svg>
@@ -267,7 +267,7 @@
                     <svg class="cards-svg" width="6" height="6">
                         <use href="./images/svg/red-dot.svg"></use>
                     </svg>
-                </a>
+                </div>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <button href="#" class="icon-link" data-product2-button>
