добавлен ховер на иконку

--- a/src/sass/components/_him.scss
+++ b/src/sass/components/_him.scss
@@ -253,7 +253,7 @@
   @include transition(fill);
 
   .btn-him:hover &,
-  .n-him:focus & {
+  .btn-him:focus & {
     fill: getColor('white');
   }
 }
