--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -19,6 +19,9 @@
 
   &:focus,
   &:hover {
+    transform: scale(1.1);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     color: getColor('white');
     background-color: getColor('accent-color');
   }
