--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -115,13 +115,12 @@
                             </picture>
                             <h3 class="overflow-img-text">Vegan</h3>
                         </li>
-                        <li class="overflow-img-cont img3"><a href="#">
+                        <li class="overflow-img-cont img3">
                             <picture>
                                 <source srcset="./images//overflow/coffee/tasty.jpg 1x, ./images//overflow/coffee/tasty@2x.jpg 2x" />
                                 <img class="overflow-img1" src="../src/images/overflow/coffee/tasty.jpg" alt="вкусное кофе">
                             </picture>
                             <h3 class="overflow-img-text">Tasty</h3>
-                            </a>
                         </li>
                         <div class="overflow-compounds-list zero">
                             <p>components 0%</p>
