--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -53,10 +53,10 @@
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+  @include transform(scale(1));
   &:hover {
-    transform: scale(1.07);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transform: scale(1.1);
   }
   @include size(tablet) {
     margin: 0;
