--- a/src/sass/utils/_transition.scss
+++ b/src/sass/utils/_transition.scss
@@ -3,3 +3,8 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+@mixin transform($transform-property) {
+  transform: $transform-property;
+  transition-duration: 400ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
