--- a/src/sass/base/_overflow.scss
+++ b/src/sass/base/_overflow.scss
@@ -1,5 +1,5 @@
 .icon-link {
-  transform: rotate(0deg);
+  transition-duration: 0.5s;
   &.btn-open {
     transition-duration: 0.5s;
     transform: rotate(-90deg);
@@ -13,6 +13,7 @@
   bottom: 100px;
   top: 30px;
   overflow: hidden;
+  pointer-events: none;
 }
 
 .overflow {
@@ -21,6 +22,7 @@
   width: 280px;
   background-color: inherit;
   transform: translateY(250%);
+  transition-duration: 1s;
   z-index: 2;
   padding-top: 10px;
   padding-left: 16px;
@@ -48,6 +50,7 @@
   &.product-open {
     transition-duration: 1s;
     transform: translateY(0%);
+    pointer-events: auto;
   }
 
   &-list {
@@ -106,7 +109,6 @@
     width: 100%;
     flex-direction: column;
     justify-content: center;
-    /*     font-family: Titan One; */
     font-style: normal;
     font-weight: normal;
     text-align: center;
@@ -123,47 +125,28 @@
     }
   }
 }
-.first {
-  opacity: 0;
-}
-.second {
-  opacity: 0;
-}
+.first,
+.second,
 .three {
   opacity: 0;
 }
 .img1:hover ~ .first {
-  animation-name: anim;
-  animation-duration: 1s;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: alternate;
-  animation-fill-mode: forwards;
-  opacity: 1;
+  animation: anim 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0s 1 alternate forwards;
 }
 .img2:hover ~ .second {
-  animation-name: anim;
-  animation-duration: 1s;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: alternate;
-  animation-fill-mode: forwards;
-  opacity: 1;
+  animation: anim 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0s 1 alternate forwards;
 }
 .img3:hover ~ .three {
-  animation-name: anim;
-  animation-duration: 1s;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: alternate;
-  animation-fill-mode: forwards;
-  opacity: 1;
+  animation: anim 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0s 1 alternate forwards;
 }
+/* Тут вопрос как красивее */
+
+/* .zero {
+  transition: opacity 1s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+} */
 .overflow-img-cont:hover ~ .zero {
-  opacity: 0;
+  animation: anim 1200ms cubic-bezier(0.4, 0, 0.2, 1) 0s 1 alternate-reverse
+    forwards;
 }
 @keyframes anim {
   0% {
