--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -54,6 +54,10 @@
   border-radius: 24px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
+  @include transform(scale(1));
+  &:hover {
+    transform: scale(1.1);
+  }
   @include size(tablet) {
     margin: 0;
     padding-right: 30px;
