--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -174,6 +174,7 @@
   &:focus {
     color: getColor('accent-color');
     background-color: getColor('white');
+    transform: scale(1.07);
   }
 
   @include size(desktop) {
