--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -133,7 +133,7 @@
     <div class="contacts-container-btn">
       <a
         class="contacts-btn button"
-        href="#"
+        href="https://google.com/maps"
         target="_blank"
         rel="noopener noreferrer"
         >Our Locations
@@ -142,7 +142,7 @@
       ></a>
       <a
         class="contacts-btn button"
-        href="#"
+        href="https://google.com/maps"
         target="_blank"
         rel="noopener noreferrer"
         >Franchise
