--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import 'utils/colors';
 @import 'utils/size';
 @import 'utils/transition';
+@import 'utils/retina';
 @import 'base/button';
 @import 'base/overflow';
 @import 'components/container';
