--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -1,10 +1,10 @@
-<section id="him" class="him-background">
-  <section class="container">
+<section id="him" class="him-background him-bg">
+  <div class="container">
     <hgroup class="him-section-title">
       <h3>tradition and love </h3>
       <h2>how it’s made?</h2>
     </hgroup>
-    <div class="him-flex-container him-bg">
+    <div class="him-flex-container">
       <picture class="him-picture">
         <source srcset="./images/him/desktop/how-its-made-cow.png 1x, ./images/him/desktop/how-its-made-cow.png 2x"
                 media="(min-width:1200px)" />
@@ -14,23 +14,22 @@
                 media="(min-width:480px)" />
         <img class="image" src="./images/him/desktop/how-its-made-cow.png" alt="cow" width="516" />
       </picture>
-
-
-      <div class="him-div-bg">
-        <p> Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
-          faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-        <p class="him-text-padding"> Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris
-          rhoncus
-          orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
-          massa
-          nibh, tincidunt.</p>
-        <p class="line">Aliquam erat volutpat. Aenean accumsan.</p>
-        <button class="button btn-him" type="button"> Read more
-          <svg class="him-svg">
-            <use href="./images/svg/sprite.svg#arrow-right"></use>
-          </svg>
-        </button>
-
+      <div>
+        <div class="him-div-bg">
+          <p> Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
+            faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+          <p class="him-text-padding "> Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris
+            rhoncus
+            orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
+            massa
+            nibh, tincidunt.</p>
+          <p class="line">Aliquam erat volutpat. Aenean accumsan.</p>
+          <button class="button btn-him" type="button"> Read more
+            <svg class="him-svg">
+              <use href="./images/svg/sprite.svg#arrow-right"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </div>
     <ul class="him-flex-container him-list">
@@ -44,5 +43,5 @@
         <p class="bullet-him candy">84</p>Aliquam ac dui vel dui vnpmulputate consectetur. Mauris massa.
       </li>
     </ul>
-  </section>
+  </div>
 </section>
