добавлено закрытие окон по клику

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,9 +17,9 @@
           <ul class="header-menu">
             <li class="item"><a class="header-menu-link active-page" href="index.html">Home</a></li>
             <li class="item"><a class="header-menu-link" href="">About us</a></li>
-            <li class="item"><a class="header-menu-link" href="#him">How it’s made?</a></li>
-            <li class="item"><a class="header-menu-link" href="#products">Our products</a></li>
-            <li class="item"><a class="header-menu-link" href="#contacts">Contact</a></li>
+            <li class="item"><a class="header-menu-link header-link" href="#him" >How it’s made?</a></li>
+            <li class="item"><a class="header-menu-link header-link" href="#products" >Our products</a></li>
+            <li class="item"><a class="header-menu-link header-link" href="#contacts" >Contact</a></li>
           </ul>
         </div>
       </nav>
