--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -165,7 +165,7 @@
   width: 54px;
   height: 40px;
   color: getColor('quotation-marks-color');
-  background-image: url(/images/svg/quatation-marks.svg);
+  background-image: url(../images/svg/quatation-marks.svg);
   background-repeat: no-repeat;
   background-size: cover;
 
